--- a/templates/login.html
+++ b/templates/login.html
@@ -69,7 +69,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
+        <p>Don have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
     </div>
 </body>
 </html>
